book context menu visibility bug fix

--- a/src/main/webapp/resources/cupertino/css/books.css
+++ b/src/main/webapp/resources/cupertino/css/books.css
@@ -8,6 +8,8 @@
 	-moz-box-shadow: 2px 2px 2px silver;
 	-webkit-box-shadow: 2px 2px 2px silver;
 	z-index: 99999;
+	display:none;
+	position:absolute;	
 }
 .contextMenu li 
 {
